CSS fixes for History Heading Alignment

--- a/src/app/views/querying/sql-console/sql-console.component.scss
+++ b/src/app/views/querying/sql-console/sql-console.component.scss
@@ -4,6 +4,11 @@
 select{
   width: auto;
 }
+#history-item-head{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 #history {
   max-height: 240px;
   overflow-x: hidden;
